# larkxr_native_android_app

./: .gitignore  README.md  README.zh_CN.md  build.gradle  certificate_appkey.txt  certificate_appsecret.txt  config.gradle  settings.gradle  test.jks
cmake/: android_third_party.cmake  utils.cmake
doc/: README.md  README.zh_CN.md  update.md  update.zh_CN.md  云雀VR_SDK.md
gradle/wrapper/: gradle-wrapper.properties
lark_xr/: lark-core-kit-3.2.0.0-build-1.aar  larkxr-kit-3.2.2.0-build-1.aar
lark_xr/doc/: README.md  update.md  云雀VR_SDK.md  云雀VR_SDK更新说明.md
lark_xr/include/lark_xr/: app_list_task.h  common.h  lark_xr.h  lk_common_types.h  pxy_inner_utils.h  types.h  xr_client.h  xr_config.h  xr_latency_collector.h  xr_tracking_frame.h  xr_video_frame.h
lark_xr/include/larkxr_4c/: xr_client_4c.h
lib_pxygl/: build.gradle
lib_pxygl/src/main/: AndroidManifest.xml
lib_pxygl/src/main/cpp/: CMakeLists.txt  asset_file.cpp  asset_file.h  asset_loader.cpp  asset_loader.h  bitmap_factory.cpp  bitmap_factory.h  logger.cpp  logger.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  pxygl.cpp  pxygl.h  shader.cpp  shader.h  skybox.cpp  skybox.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex_array_object.cpp  vertex_array_object.h
lib_xr_common_ui/: build.gradle
lib_xr_common_ui/src/main/: AndroidManifest.xml
lib_xr_common_ui/src/main/cpp/: CMakeLists.txt  application.cpp  application.h  asset_files.cpp  asset_files.h  build_config.cpp  build_config.h  cloudxr_client.cpp  cloudxr_client.h  env_context.cpp  env_context.h  input.cpp  input.h  log.h  rect_texture.cpp  rect_texture.h  test_obj.cpp  test_obj.h  utils.h
lib_xr_common_ui/src/main/cpp/ui/: aa_bb.cpp  aa_bb.h  controller.cpp  controller.h  localization.cpp  localization.h  menu_view.cpp  menu_view.h  navigation.cpp  navigation.h  raycast.cpp  raycast.h  view.cpp  view.h
lib_xr_common_ui/src/main/cpp/ui/component/: base.cpp  base.h  border.cpp  border.h  button.cpp  button.h  color_box.cpp  color_box.h  image.cpp  image.h  keyboard.cpp  keyboard.h  slider.cpp  slider.h  text.cpp  text.h
lib_xr_common_ui/src/main/cpp/ui/home/: cover_item.cpp  cover_item.h  home.cpp  home.h
lib_xr_common_ui/src/main/cpp/ui/loading/: loading.cpp  loading.h
lib_xr_common_ui/src/main/cpp/ui/setup/: coderate.cpp  coderate.h  fec_report.cpp  fec_report.h  ffr_setup.cpp  ffr_setup.h  fps.cpp  fps.h  h265.cpp  h265.h  haptics_feedback.cpp  haptics_feedback.h  ipd.cpp  ipd.h  item_base.cpp  item_base.h  kcp.cpp  kcp.h  quick_config_setup.cpp  quick_config_setup.h  resolution.cpp  resolution.h  room_height.cpp  room_height.h  setup.cpp  setup.h  setup_skybox.cpp  setup_skybox.h  setup_xrspace.cpp  setup_xrspace.h  use_10bitencode.cpp  use_10bitencode.h
lib_xr_common_ui/src/main/cpp/ui/setup_server/: setup_server_addr.cpp  setup_server_addr.h
xr_app_htc/: build.gradle
xr_app_htc/src/main/: AndroidManifest.xml
xr_app_htc/src/main/cpp/: CMakeLists.txt  main.cpp  matrices.cpp  matrices.h  vectors.h  wave_application.cpp  wave_application.h  wvr_frame_buffer.cpp  wvr_frame_buffer.h  wvr_scene.cpp  wvr_scene.h  wvr_scene_cloud.cpp  wvr_scene_cloud.h  wvr_scene_local.cpp  wvr_scene_local.h  wvr_utils.cpp  wvr_utils.h
xr_app_huawei/: build.gradle
xr_app_huawei/src/main/: AndroidManifest.xml
xr_app_nolo/: build.gradle
xr_app_nolo/libs/: libdevicesuit-release.aar
xr_app_nolo/src/main/: AndroidManifest.xml
xr_app_nolo/src/main/cpp/: CMakeLists.txt  NVRScene.h  larkxr_client.cpp  larkxr_client.h  native-lib.cpp  nolo_vr_utils.cpp  nolo_vr_utils.h  scene_base.cpp  scene_base.h  scene_local.cpp  scene_local.h
xr_app_nolo/src/main/cpp/gsxr/: gsxr_dev.cpp  gsxr_dev.h
xr_app_nolo/src/main/cpp/render/: Matrix.h  MatrixState.h  texture_rect.cpp
xr_app_oculus/: build.gradle
xr_app_oculus/src/main/: AndroidManifest.xml
xr_app_oculus/src/main/cpp/: CMakeLists.txt  egl_utils.cpp  egl_utils.h  main.cpp  ovr_application.cpp  ovr_application.h  ovr_egl.cpp  ovr_egl.h  ovr_frame_buffer.cpp  ovr_frame_buffer.h  ovr_scene.cpp  ovr_scene.h  ovr_scene_cloud.cpp  ovr_scene_cloud.h  ovr_scene_local.cpp  ovr_scene_local.h  ovr_utils.h
xr_app_openxr_oculus/: build.gradle
xr_app_openxr_oculus/src/main/: AndroidManifest.xml
xr_app_openxr_pico/: build.gradle
xr_app_openxr_pico/src/main/: AndroidManifest.xml
xr_app_openxr_pico/src/main/cpp/: CMakeLists.txt  frame_buffer.cpp  frame_buffer.h  graphics_device_android.cpp  graphics_device_android.h  logger.cpp  main.cpp  openxr_context.cpp  openxr_context.h  options.h  pController.cpp  pvr_xr_application.cpp  pvr_xr_application.h  pvr_xr_jni.cpp  pvr_xr_scene.cpp  pvr_xr_scene.h  pvr_xr_scene_cloud.cpp  pvr_xr_scene_cloud.h  pvr_xr_scene_local.cpp  pvr_xr_scene_local.h  pvr_xr_utils.cpp  pvr_xr_utils.h  xr_input_state.cpp  xr_input_state.h
xr_app_pico/: .project  build.gradle
xr_app_pico/src/main/cpp/: CMakeLists.txt  native-lib.cpp  pvr_application.cpp  pvr_application.h  pvr_scene.cpp  pvr_scene.h  pvr_scene_cloud.cpp  pvr_scene_cloud.h  pvr_scene_local.cpp  pvr_scene_local.h  pvr_utils.cpp  pvr_utils.h
xr_app_xms/: build.gradle
xr_app_xms/libs/: svrApi-release.aar
xr_app_xms/src/main/cpp/: CMakeLists.txt  aio_application.cpp  aio_application.h  xms_scene.cpp  xms_scene.h  xms_scene_cloud.cpp  xms_scene_cloud.h  xms_scene_local.cpp  xms_scene_local.h
xr_app_xms/src/main/cpp/framework/: svrAndroidMain.cpp  svrApplication.cpp  svrApplication.h  svrInput.cpp  svrInput.h  svrRenderExt.cpp  svrRenderExt.h  svrRenderTarget.cpp  svrRenderTarget.h  svrUtil.cpp  svrUtil.h
xr_app_xvisio/: build.gradle
xr_app_xvisio/src/main/cpp/: CMakeLists.txt  World.cpp  larkxr_client.cpp  larkxr_client.h  native-lib.cpp  scene_base.cpp  scene_base.h  scene_local.cpp  scene_local.h  xvisio_vr_utils.cpp  xvisio_vr_utils.h
xr_app_xvisio/src/main/cpp/INxrSensorClient/: INxrSensorClient.h  NxrMoudle.cpp  NxrMoudle.h  NxrSensorTypes.h  nxrsensortest.cpp  readme.txt  vsctest.cpp
xr_app_xvisio/src/main/cpp/render/: MatrixState.cpp  texture_rect.h
(+299 files in other folders)
